<resources>
    <string name="app_name">Conver Calc</string>
    <string name="distance">Distance</string>
    <string name="weight">Weight</string>
    <string name="temperature">Temperature</string>

    <string name="in_abbreviation">in</string>
    <string name="cm">cm</string>
    <string name="ft">ft</string>
    <string name="m">m</string>
    <string name="mi">mi</string>
    <string name="km">km</string>
    <string name="lbs">lbs</string>
    <string name="pounds">Pounds</string>
    <string name="kg">Kg</string>
    <string name="kilograms">Kilograms</string>

    <string name="convert">Convert</string>
    <string name="equals_symbol">=</string>
    <string name="zero_int">0</string>



</resources>